<resources>
    <string name="app_name">Control_Escolar</string>

    <string name="navigation_drawer_open">Opne</string>
    <string name="navigation_drawer_close">Close</string>


    <string name="sexoi">Sexo del alumno</string>



    <string-array name="Grado">
        <item>1ro</item>
        <item>2do</item>
        <item>3ro</item>
        <item>4to</item>
        <item>5to</item>
        <item>6to</item>

    </string-array>
    <string-array name="Grupo">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
        <item>G</item>
    </string-array>

    <string-array name="Ciclo">
        <item>2022-2023</item>
        <item>2023-2024</item>
        <item>2024-2025</item>
        <item>2025-2026</item>
        <item>2026-2027</item>
        <item>2027-2028</item>
        <item>2028-2029</item>
        <item>2029-2030</item>
    </string-array>


    <string-array name="Turno">
        <item>Matutino</item>
        <item>Vespertino</item>
    </string-array>

    <string-array name="Situacion">
        <item>REPETIDOR</item>
        <item>NUEVO INGRESO</item>
        <item>ALTA</item>
        <item>BAJA</item>
        <item>SIN COMUNICACIÓN</item>
    </string-array>

    <!--<string name="azul">#1A8AF9</string>-->
    <string name="rosa">#e44f9c</string>
    <string-array name="Sexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="SituationShort">
        <item>ALTA</item>
        <item>NUEVO INGRESO</item>
        <item>REPETIDOR</item>

    </string-array>


    <string-array name="Materias">
        <item>Matematicas</item>
        <item>Español</item>
        <item>Fisica</item>
        <item>Quimica</item>

    </string-array>

    <string-array name="Aspectos">
        <item>Trabajo</item>
        <item>Tarea</item>
        <item>Examen</item>
        <item>Proyecto</item>
        <item>Otro : Especifique</item>
    </string-array>

    <string-array name="tipo_escuela">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Preparatoria</item>
        <item>Universidad</item>
    </string-array>

    <string-array name="Discapacitado">
        <item>No Discapacitado</item>
        <item>Discapacitado</item>
    </string-array>

    <string-array name="Indigena">
        <item>Grupo_etnico</item>
        <item>No Grupo Etnico</item>
    </string-array>

    <string-array name="Entidad_federativa">
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Coahuila de Zaragoza</item>
        <item>Colima</item>
        <item>Ciudad de México</item>
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>México</item>
        <item>Michoacán de Ocampo</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz de Ignacio de la Llave</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>

    <string-array name="partials">
        <item>Parcial 1</item>
        <item>Parcial 2</item>
        <item>Parcial 3</item>
        <item>Parcial 4</item>
        <item>Parcial 5</item>
    </string-array>


    <array name="ESTADISTICAS">
         <item>Estadistica 1</item>
         <item>Estadistica 2</item>
         <item>Estadistica 3</item>
         <item>Estadistica 4</item>
    </array>


    <string name="partials">SELECCIONE EL PERIODO</string>
    <string name="matters">SELECCIONE LA MATERIA</string>
    <string name="entidad">ENTIDAD FEDERATIVA</string>
    <string name="grado">Seleccione el Grado </string>
    <string name="grupo">Seleccione el Grupo </string>
    <string name="turno">Seleccione el Turno </string>
    <string name="ciclo">Seleccione el Ciclo </string>
    <string name="tipo">Seleccione Tipo de Escuela </string>
    <string name="situacion">INDIQUE LA SITUACION DEL ALUMNO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>