<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_datosEscuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/barra_escuela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/purple_500"
                android:elevation="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="Agregar Información de la Escuela"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/image_datosEscuela"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/barra_escuela"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/escueladefault" />

            <Spinner
                android:id="@+id/cbx_tipo_escuela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_escuela"
                android:prompt="@string/tipo"
                android:spinnerMode="dialog"
                android:layout_below="@+id/image_datosEscuela"
                android:layout_marginTop="10dp"/>


            <EditText
                android:id="@+id/edit_datosNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbx_tipo_escuela"
                android:layout_marginTop="10dp"
                android:hint="Nombre"
                android:inputType="textCapSentences" />

            <Spinner
                android:id="@+id/cbx_datosGrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_datosNombre"
                android:layout_marginTop="10dp"
                android:entries="@array/Grado"
                android:prompt="@string/grado"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/cbx_datosGrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_datosNombre"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/cbx_datosGrado"
                android:entries="@array/Grupo"
                android:prompt="@string/grupo"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/cbx_datosTurno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_datosNombre"
                android:layout_toRightOf="@+id/cbx_datosGrupo"
                android:layout_marginTop="10dp"
                android:entries="@array/Turno"
                android:prompt="@string/turno"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/cbx_datosCiclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbx_datosGrado"
                android:layout_marginTop="10dp"
                android:entries="@array/Ciclo"
                android:visibility="invisible"
                android:prompt="@string/ciclo"
                android:spinnerMode="dialog" />
            <TextView
                android:id="@+id/text_ciclo_escuela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbx_datosGrado"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text=".."/>

           <!-- <Button
                android:id="@+id/btn_datosCrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbx_datosCiclo"
                android:layout_marginTop="10dp"
                android:text="Crear Escuela" />-->


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>